--- a/Education_Pathways/frontend/src/components/css/course-description.css
+++ b/Education_Pathways/frontend/src/components/css/course-description.css
@@ -39,6 +39,13 @@ p {
   padding-bottom: 3%;
 }
 
+.course-template .peerfeedback {
+  vertical-align: center;
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+
 .course-template .col-item h3 {
   margin-top: 30px;
   margin-left: 4%;
@@ -77,6 +84,18 @@ p {
 }
 
 .syllabus-link {
+  margin-top: 2%;
+    border-radius: 15px;
+    background-color: #1C3E6E;
+    color: white;
+    width: 8em;
+    height: 3em;
+    border: none;
+    font-size: 1.2em;
+    text-align: center;
+}
+
+.peerfeedback-link {
   margin-top: 2%;
     border-radius: 15px;
     background-color: #1C3E6E;
