--- a/Education_Pathways/frontend/src/components/css/course-description.css
+++ b/Education_Pathways/frontend/src/components/css/course-description.css
@@ -45,6 +45,13 @@ p {
   padding-bottom: 3%;
 }
 
+.course-template .uofthubpeerfeedback {
+  vertical-align: center;
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+
 
 .course-template .col-item h3 {
   margin-top: 30px;
@@ -96,6 +103,18 @@ p {
 }
 
 .peerfeedback-link {
+  margin-top: 2%;
+    border-radius: 15px;
+    background-color: #1C3E6E;
+    color: white;
+    width: 8em;
+    height: 3em;
+    border: none;
+    font-size: 1.2em;
+    text-align: center;
+}
+
+.uofthubpeerfeedback-link {
   margin-top: 2%;
     border-radius: 15px;
     background-color: #1C3E6E;
