Added Professor feature onCourse Page - Need to link it to database result

--- a/Education_Pathways/frontend/src/components/css/course-description.css
+++ b/Education_Pathways/frontend/src/components/css/course-description.css
@@ -71,7 +71,7 @@ p {
   color: #5C779C;
 }
 
-.course-template .course-description, .course-requisite {
+.course-template .course-description, .course-requisite, course-professor {
   margin-left: 0;
 }
 
