--- a/Education_Pathways/frontend/src/components/css/course-description.css
+++ b/Education_Pathways/frontend/src/components/css/course-description.css
@@ -71,7 +71,7 @@ p {
   color: #5C779C;
 }
 
-.course-template .course-description, .course-requisite, course-professor {
+.course-template .course-description, .course-requisite, course-professor, course-relatedcareers {
   margin-left: 0;
 }
 
