Aligned the text displaying Course Professor & Related Careers

--- a/Education_Pathways/frontend/src/components/css/course-description.css
+++ b/Education_Pathways/frontend/src/components/css/course-description.css
@@ -73,6 +73,7 @@ p {
 
 .course-template .course-description, .course-requisite, course-professor, course-relatedcareers {
   margin-left: 0;
+  text-align: center;
 }
 
 .requisites-display {
