Added new section 'Take This Course If You Like' to course page, populated database with careers and some pre-req values

--- a/Education_Pathways/frontend/src/components/css/course-description.css
+++ b/Education_Pathways/frontend/src/components/css/course-description.css
@@ -71,7 +71,7 @@ p {
   color: #5C779C;
 }
 
-.course-template .course-description, .course-requisite, course-professor, course-relatedcareers {
+.course-template, .course-description, .course-requisite, .course-professor, .course-relatedcareers, .course-keywords {
   margin-left: 0;
   text-align: center;
 }
